GG-416 Propagate federation `sharable` directive to generated connection types. (#403)